# anime_card_clash

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
AutoHotkey/: Installer.ahk:Zone.Identifier
src/: __main__.py  body.py  card_clasher.py  config.py  levels.py  ocr.py
src/utils/: jaccard.py  logging.py  try_convert.py  types.py
tests/: test_pixels.py
utils/: cc.py
