[project]
name = "anime-card-clasher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "easyocr",
    "pyautogui",
    "pydirectinput",
    "pygetwindow",
    "numpy",
    "torch",
    "torchvision",
    "torchaudio",
    "ahk>=1.8.4",
    "rich>=14.0.0",
    "mss>=10.0.0",
]
