[project]
name = "anime-card-clasher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "easyocr",
    "pyautogui",
    "pygetwindow",
    "numpy",
    "torch",
    "torchvision",
    "torchaudio",
    "rich>=14.0.0",
    "mss>=10.0.0",
    "pydirectinput-rgx>=2.1.2",
    "opencv-python>=4.12.0.88",
]

# Tell uv about the special PyTorch download server
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121" # Use the URL from the PyTorch website

# Tell uv to ONLY get these specific packages from that server
[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
